@@ -6,6 +6,7 @@ postgresql-common (216) UNRELEASED; urgency=medium
     is installed.
   * pg_ctlcluster: Fix cluster start in 8.2/3.
   * pg_virtualenv: 8.2 doesn't have pg_ctl -c yet.
+  * t/170_extensions.t: Don't drop plpgsql before testing extensions.
 
  -- Christoph Berg <myon@debian.org>  Tue, 19 May 2020 09:46:50 +0200
 
